# vector_robot

./: .clang-format  .gitignore  README.md
docs/: code_modification_developer_guide.md  ethernet_setup.md  robot_ssh.md  setup_robot_auto_start.md
scripts/: README.md  add_sudo_nopasswd.sh  config_udev_rules.sh  configure_ethernet.sh  install_ros2.sh  robot_startup.service  robot_startup.sh
vector_base/: CMakeLists.txt  README.md  package.xml
vector_base/config/: base_params.yaml
vector_base/include/: diff_drive_control.hpp
vector_base/launch/: base_launch.py
vector_base/src/: diff_drive_control.cpp
vector_base/vector_base/: cmd_vel_filter.py  diff_drive_control.py
vector_bringup/: CMakeLists.txt  README.md  package.xml
vector_bringup/config/: robot.rviz  uros_agents.yaml
vector_bringup/launch/: robot_launch.py  uros_agents_launch.py
vector_description/: CMakeLists.txt  README.md  package.xml
vector_description/config/: robot_description.rviz
vector_description/launch/: vector_description_launch.py
vector_description/urdf/: gazebo.urdf.xacro  model.urdf.xacro  robot.urdf.xacro  utils.urdf.xacro
vector_description/urdf/sensors/: battery.xacro  diff_drive.xacro  imu.xacro  lidar.xacro  rgbd_camera.xacro
vector_esp32io/: .gitignore  README.md  platformio.ini
vector_esp32io/extra_packages/vector_interfaces/: CMakeLists.txt
vector_esp32io/extra_packages/vector_interfaces/msg/: LedStates.msg
vector_esp32io/include/: button.h  configuration.h  relay.h
vector_esp32io/src/: button.cpp  main.cpp  relay.cpp
vector_firmware/: README.md  platformio.ini
vector_firmware/extra_packages/vector_interfaces/: CMakeLists.txt  package.xml
vector_firmware/extra_packages/vector_interfaces/msg/: EncoderTicks.msg  MotorTicksSec.msg
vector_firmware/include/: ESP32Encoder.h  PID.hpp  configurations.hpp  mcpwm_driver.hpp  uros_core.hpp
vector_firmware/src/: ESP32Encoder.cpp  PID.cpp  main.cpp  mcpwm_driver.cpp  uros_core.cpp  uros_core.txt  uros_core_no_enc.cpp
vector_gazebo/: CMakeLists.txt  README.md  package.xml
vector_gazebo/config/: gz_bridge.yaml
vector_gazebo/launch/: gazebo_simulation_launch.py  gazebo_world_launch.py
vector_gazebo/models/: DOCK.dae
vector_gazebo/worlds/: empty.sdf  ionic.sdf  maze_world.sdf
vector_hardware/: CMakeLists.txt  README.md  package.xml
vector_hardware/config/: vector_hardware_params.yaml
vector_hardware/launch/: hardware_launch.py  vector_hardware_launch.py
vector_hardware/vector_hardware/: imu_bno.py  led_control.py
vector_interfaces/: CMakeLists.txt  README.md  package.xml
vector_interfaces/msg/: Decision.msg  PushButtonStates.msg
vector_interfaces/srv/: Fan.srv  JetsonClocks.srv  NVPModel.srv
vector_teleop/: CMakeLists.txt  README.md  package.xml
vector_teleop/config/: joy_params.yaml  twist_mux.yaml
vector_teleop/launch/: joystick_launch.py  teleop_key_launch.py
vector_teleop/src/: joy_splitter.cpp
vector_teleop/vector_teleop/: joy_control.py
vector_watchdogs/: CMakeLists.txt  README.md  package.xml
vector_watchdogs/config/: diagnostic.yaml  watchdogs_params.yaml
vector_watchdogs/launch/: watchdogs_launch.py
vector_watchdogs/vector_watchdogs/: diagnostics_jtop.py  jtop_utils.py
